# tcompiler

./: .gitignore  CMakeLists.txt  README.md  driver.cpp  test.py
html/: annotated.html  classes.html  classgraph_1_1_graph-members.html  classgraph_1_1_graph.html  classgraph_1_1_node-members.html  classgraph_1_1_node.html  classgraph_1_1graph__exception-members.html  classgraph_1_1graph__exception.html  classgraph_1_1io__error-members.html  classgraph_1_1io__error.html  classgraph_1_1parse__error-members.html  classgraph_1_1parse__error.html  classgraph_1_1proto_1_1_proto_reader-members.html  classgraph_1_1proto_1_1_proto_reader.html  classgraph_1_1unsupported__error-members.html  classgraph_1_1unsupported__error.html  classgraph_1_1validation__error-members.html  classgraph_1_1validation__error.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8500bdfd3b26e2c9053a9d6b880ceba8.html  dir_d3e03ffc02fed53d32bf903a9bb2267d.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  exceptions_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_8h_source.html  hierarchy.html  index.html  menudata.js  node_8h_source.html  reader_8h_source.html  structgraph_1_1_tensor_info-members.html  structgraph_1_1_tensor_info.html  structgraph_1_1proto_1_1_graph_proto_info-members.html  structgraph_1_1proto_1_1_graph_proto_info.html  structgraph_1_1proto_1_1_node_proto_info-members.html  structgraph_1_1proto_1_1_node_proto_info.html  (+1 more)
html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+3 more)
include/backend/: codegen.hpp  mlir_gen.hpp
include/frontend/: onnx_loader.hpp
include/graph/: attribute.hpp  exceptions.h  graph.h  graph.hpp  node.h  node.hpp  tensor.hpp  types.h
include/middle_end/: mlir_builders.hpp
include/reader/: reader.h
include/visualization/: dot_exporter.hpp
models/: multi_add_mul.onnx  simple_cnn.onnx  test.onnx  test_model.onnx
src/: graph.cpp  main.cpp  reader.cpp
src/backend/: codegen.cpp  mlir_gen.cpp
src/frontend/: onnx_loader.cpp
src/graph/: attribute.cpp  graph.cpp  node.cpp  tensor.cpp
src/middle_end/: mlir_builders.cpp
src/visualization/: dot_exporter.cpp
tests/: CMakeLists.txt  test_attribute.cpp  test_load_models.cpp  test_main.cpp  test_node.cpp  test_parse_attribute.cpp  test_parse_node.cpp  test_parse_tensor.cpp  test_parse_valueinfo.cpp  test_reader.cpp  test_tensor.cpp
tests/frontend/: test_graph.cpp  test_onnx_loader.cpp
tests/middle_end/: test_build_concat_op.cpp  test_build_elementwise_generic.cpp  test_build_matmul_generic.cpp  test_build_relu_generic.cpp  test_build_reshape_op.cpp  test_build_shape_op.cpp  test_dimensions.hpp  test_infer_broadcast_shape.cpp  test_make_broadcast_map.cpp
